# Device-Driver

./: .gitignore  CMakeLists.txt  README.md  app.c  close.sh  myfifo_ioctl.h  start.sh
driver/: Makefile  keylogger.c  myfifo.c
kernel/: Makefile
kernel/src/: main.c
scripts/: cleanup_keylogger.sh  setup_keylogger.sh
src/: Makefile  main.c  myfifo.c
user/: Makefile  arduino_bridge  arduino_bridge.c  keylogger_app  keylogger_app.c
user/include/: key_handler.h
user/src/: ioctl_controller.c  key_handler.c  user.c
